Safari365 Prod/src/objects/CRC__c.object
<CustomObject>
    <fields>
        <fullName>CODE__c</fullName>
        <externalId>true</externalId>
        <label>CODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENCY__c</fullName>
        <label>CURRENCY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAXAPPLY__c</fullName>
        <label>TAXAPPLY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX__c</fullName>
        <label>TAX</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERMS1__c</fullName>
        <label>TERMS1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TERMS2__c</fullName>
        <label>TERMS2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>CRC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CODE__c</columns>
        <columns>CURRENCY__c</columns>
        <columns>TAX__c</columns>
        <columns>TAXAPPLY__c</columns>
        <columns>TERMS1__c</columns>
        <columns>TERMS2__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRC-{000000000}</displayFormat>
        <label>CRC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>